force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__AuthenticatorObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthenticatorObject__c</fullName>
    <label>Authenticator Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthenticatorObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>