force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__BasedOnReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BasedOnReferenceId__c</fullName>
    <label>Based On Reference</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BasedOnReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>