force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__CustodianOrganizationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodianOrganizationId__c</fullName>
    <label>Custodian Organization</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodianOrganizationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>