force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__DiagnosticDocumentTypeCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosticDocumentTypeCodeId__c</fullName>
    <label>Diagnostic Document Type Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosticDocumentTypeCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>