force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__DiagnosticSummaryDocumentStage__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosticSummaryDocumentStage__c</fullName>
    <label>Diagnostic Summary Document Stage</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosticSummaryDocumentStage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>