force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__DiagnosticSummaryStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosticSummaryStatus__c</fullName>
    <label>Diagnostic Summary Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosticSummaryStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>