force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__DiagnosticSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosticSummaryText__c</fullName>
    <label>Diagnostic Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosticSummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>