force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__Image4Url__c.field-meta.xml
<CustomField>
    <fullName>ssot__Image4Url__c</fullName>
    <label>Image4 Url</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Image4Url</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>