force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__Image5Url__c.field-meta.xml
<CustomField>
    <fullName>ssot__Image5Url__c</fullName>
    <label>Image5 Url</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Image5Url</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>