force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__ImageComment5Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImageComment5Name__c</fullName>
    <label>Image Comment5</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImageComment5Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>