force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__ImageComments1Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ImageComments1Name__c</fullName>
    <label>Image Comments1</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ImageComments1Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>