force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__InterpretedByHealthcarePerformerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InterpretedByHealthcarePerformerId__c</fullName>
    <label>Interpreted By Healthcare Performer</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InterpretedByHealthcarePerformerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>