force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__rel_1716725811347_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725811347_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DiagnosticSummary_AuthenticatorId_ma_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>DiagnosticSummary_AuthenticatorId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716725811347_end</relationshipName>
    <type>Lookup</type>
</CustomField>