force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__rel_1716725813079_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725813079_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DiagnosticSummary_BasedOnReferenceId_rel</label>
    <referenceTo>ssot__PatientMedicationStatement__dlm</referenceTo>
    <relationshipLabel>DiagnosticSummary_BasedOnReferenceId_rel</relationshipLabel>
    <relationshipName>rel_1716725813079_end</relationshipName>
    <type>Lookup</type>
</CustomField>