force-app/main/default/objects/ssot__DiagnosticSummary__dlm/fields/ssot__ReportAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReportAttachmentId__c</fullName>
    <label>Report Attachment</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReportAttachmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>